-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 0.9.1
-
Component/s: Delphi - Compiler
-
Labels:None
-
Environment:
Windows
-
Patch Info:Patch Available
If a typedef refers to a type that is defined in an included IDL file, the code for the typedef is not generated. Furthermore, the Compiler issues a warning about pending typedefs.
If the typedef is used elsewhere in the code, the generated code cannot be compiled because of the missing code for the pending typedefs.
Inner IDL file:
namespace * bug.Uncompileable.Inner struct InnerStruct { }
Outer IDL file:
namespace * bug.Uncompileable.Outer
include "bug_codegen_inner.thrift"
struct AnotherStruct
{
}
typedef bug_codegen_inner.InnerStruct OuterStruct
typedef AnotherStruct AnotherRedefined
struct OuterContainer {
1: AnotherRedefined MoreData
2: OuterStruct SomeData
}
In this example, the typedef for OuterStruct is not generated, thus Delphi fails to compile OuterContainer.
- is related to
-
THRIFT-1933 Delphi generator crashes when a typedef references another typedef from an included file
-
- Closed
-