THRIFT-1904 Incorrect code is generated for typedefs which use included types

Patch: Jens Geyer